tests/bad-configs/inconsistent-indent.errors
ERROR: inconsistent-indent.config:3: inconsistent indentation
