tests/bad-configs/inconsistent-indent.config
host alpha
     ssh-timeout 1
       ssh-timeout 2
